<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_gey">

    <Button
        android:id="@+id/activity_main_button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="5dp"
        android:text="@string/urgent_important"
        app:layout_constraintBottom_toTopOf="@id/activity_main_button3"
        app:layout_constraintEnd_toStartOf="@+id/activity_main_button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_main_button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="5dp"
        android:text="@string/urgent_pas_important"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_main_button1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_main_button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="5dp"
        android:text="@string/important_pas_urgent"
        app:layout_constraintBottom_toTopOf="@id/activity_main_floatingActionButton"
        app:layout_constraintEnd_toStartOf="@+id/activity_main_button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_button1" />

    <Button
        android:id="@+id/activity_main_button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="5dp"
        android:text="@string/pas_important_pas_urgent"
        app:layout_constraintBottom_toTopOf="@id/activity_main_floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_main_button3"
        app:layout_constraintTop_toBottomOf="@id/activity_main_button2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_main_floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/ajouter_une_tache"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_button3"
        app:srcCompat="@android:drawable/ic_menu_add" />

</androidx.constraintlayout.widget.ConstraintLayout>